--- a/testCSM/templates/testType.html
+++ b/testCSM/templates/testType.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>testType</title>
         <meta charset="utf-8" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -15,18 +15,43 @@
             <ul class="nav nav-tabs card-header-tabs col-md-10 text-center d-flex justify-content-center" style="margin-left:auto;margin-right:auto;">
                 
                 <li class="nav-item">
-                    <a class="nav-link h1 active" href="/Home">Home</a>
+                    <a class="nav-link h1" href="/Home">Home</a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link h1 " href="/Data">Data</a>
+                    <a class="nav-link h1" href="/Data">Data</a>
                 </li>
                 
             </ul>
             <div class="col-md-2"><a href="/logout" class="btn btn-danger btn-sm float-end">Log Out</a></div>
         </header>
         <main>
-            Welcome
+            <div class="card">
+                <div class="card-body">
+                    <form action="/new/testType/submit" method="post">
+                        <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
+                        
+                        <div class="mb-3 ">
+                            <label for="text1" class="form-label">text1</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="text1" id="text1" value="{{text1}}" aria-describedby="addon" >
+                                
+                            </div>
+                        </div>
+                        
+                        <div class="mb-3 ">
+                            <label for="text2" class="form-label">text2</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="text2" id="text2" value="{{text2}}" aria-describedby="addon" >
+                                
+                            </div>
+                        </div>
+                        
+                        <button type="submit" class="btn btn-primary">Add</button>
+                        <a href="/" class="btn btn-danger">Cancel</a>
+                    </form>
+                </div>
+            </div>
         </main>
         <footer>
 
