Finished developing the core features

--- a/templates/fetchTemplate.html
+++ b/templates/fetchTemplate.html
@@ -38,7 +38,7 @@
             {%endfor%}'}}
         </main>
         <footer>
-
+            {{htmlContent}}
         </footer>
     </body>
 </html>
