--- a/templates/genericTemplate.html
+++ b/templates/genericTemplate.html
@@ -25,7 +25,7 @@
             {{htmlContent}}
         </main>
         <footer>
-
+            {{footerContent}}
         </footer>
     </body>
 </html>
