--- a/testCSM/templates/Clients.html
+++ b/testCSM/templates/Clients.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{page.name}}</title>
+        <title>Clients</title>
         <meta charset="utf-8" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha384-p7RDedFtQzvcp0/3247fDud39nqze/MUmahi6MOWjyr3WKWaMOyqhXuCT1sM9Q+l" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="{{"{{ url_for('static',filename='style.css') }}"}}">
+        <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
         <style>
             
         </style>
@@ -16,11 +16,19 @@
     <body>
         <header class="d-flex flex-column flex-md-row sticky-top align-items-center px-md-4 mb-3 bg-body border-bottom shadow-sm">
             <ul class="nav nav-tabs card-header-tabs col-md-10 text-center d-flex justify-content-center" style="margin-left:auto;margin-right:auto;">
-                {%for tab in pages%}
+                
                 <li class="nav-item">
-                    <a class="nav-link h1 {{'active' if page.name == tab.name}}" href="/{{tab.name}}">{{tab.name}}</a>
+                    <a class="nav-link h1 " href="/Home">Home</a>
                 </li>
-                {%endfor%}
+                
+                <li class="nav-item">
+                    <a class="nav-link h1 active" href="/Clients">Clients</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link h1 " href="/Products">Products</a>
+                </li>
+                
             </ul>
             <div class="col-md-2"><a href="/logout" class="btn btn-danger btn-sm float-end">Log Out</a></div>
         </header>
@@ -30,36 +38,44 @@
                     <table class="table table-hover h-100">
                         <thead class="tableFixHead bg-body">
                             <tr>
-                                {%for field in data.fields%}
-                                <th scope="col">{%if field.filtrable%}<input type="text" class="form-control" placeholder="Filtr" onchange="filtr(this.value, '{{field.name}}');">{%endif%}{{field.name}}</th>
-                                {%endfor%}
+                                
+                                <th scope="col"><input type="text" class="form-control" placeholder="Filtr" onchange="filtr(this.value, 'Name');">Name</th>
+                                
+                                <th scope="col"><input type="text" class="form-control" placeholder="Filtr" onchange="filtr(this.value, 'Surname');">Surname</th>
+                                
+                                <th scope="col">Age</th>
+                                
                                 <th scope="col" style="width:10%;">
-                                    {%if not data.isChild%}
-                                    <a href="/new/{{data.name}}" class="btn btn-success" style="width:100%;">New {{data.name}}</a>
-                                    {%endif%}
+                                    
+                                    <a href="/new/Client" class="btn btn-success" style="width:100%;">New Client</a>
+                                    
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
-                            {{'{%for item in rows%}'}}
+                            {%for item in rows%}
                                 <tr name="row">
-                                    {%for field in data.fields%}
-                                        <td name="{{field.name}}">{{'{{item[' + loop.index|string + ']}}' + field.unit}}</td>
-                                    {%endfor%}
-                                    <td><a href="/edit/{{data.name}}/{{'{{item[0]}}'}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{'{{item[0]}}'}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
-                                        {%for child in data.children%}
-                                            <a href="/new/{{child.name}}" class="btn btn-success" style="width:100%;">New {{child.name}}</a>
-                                        {%endfor%}
+                                    
+                                        <td name="Name">{{item[1]}}</td>
+                                    
+                                        <td name="Surname">{{item[2]}}</td>
+                                    
+                                        <td name="Age">{{item[3]}}yrs</td>
+                                    
+                                    <td><a href="/edit/Client/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
+                                        
+                                            <a href="/new/Product" class="btn btn-success" style="width:100%;">New Product</a>
+                                        
                                     </td>
                                 </tr>
-                            {{'{%endfor%}'}}
+                            {%endfor%}
                         </tbody>
                     </table>
                 </div>
               </div>
         </main>
         <footer>
-            {{htmlContent}}
+            
         </footer>
     </body>
     <script>
