--- a/testCSM/templates/Home.html
+++ b/testCSM/templates/Home.html
@@ -19,17 +19,21 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link h1 " href="/Data">Data</a>
+                    <a class="nav-link h1 " href="/Clients">Clients</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link h1 " href="/Products">Products</a>
                 </li>
                 
             </ul>
             <div class="col-md-2"><a href="/logout" class="btn btn-danger btn-sm float-end">Log Out</a></div>
         </header>
         <main>
-            Welcome
+            Welcome to this very demonstrative <b>testCSM</b>
         </main>
         <footer>
-
+            
         </footer>
     </body>
 </html>
