--- a/testCSM/templates/Product.html
+++ b/testCSM/templates/Product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>testType</title>
+        <title>Product</title>
         <meta charset="utf-8" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -19,7 +19,11 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link h1" href="/Data">Data</a>
+                    <a class="nav-link h1" href="/Clients">Clients</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link h1" href="/Products">Products</a>
                 </li>
                 
             </ul>
@@ -28,21 +32,23 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    <form action="/new/testType/submit" method="post">
+                    <form action="/new/Product/submit" method="post">
                         <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
                         
                         <div class="mb-3 ">
-                            <label for="text1" class="form-label">text1</label>
+                            <label for="Product name" class="form-label">Product name</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" name="text1" id="text1" value="{{text1}}" aria-describedby="addon" >
+                                <input type="text" class="form-control" name="Product name" id="Product name"  {% if data is defined %}  value="{{data[0]}} {%endif%}" aria-describedby="addon" >
                                 
                             </div>
                         </div>
                         
                         <div class="mb-3 ">
-                            <label for="text2" class="form-label">text2</label>
+                            <label for="Price" class="form-label">Price</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" name="text2" id="text2" value="{{text2}}" aria-describedby="addon" >
+                                <input type="number" class="form-control" name="Price" id="Price"  {% if data is defined %}  value="{{data[1]}} {%endif%}" aria-describedby="addon$" >
+                                
+                                <span class="input-group-text" id="addon$">$</span>
                                 
                             </div>
                         </div>
@@ -54,7 +60,7 @@
             </div>
         </main>
         <footer>
-
+            
         </footer>
     </body>
 </html>
