Added recursive table rendering Made some moves in the direction of nestable dataTypes but I don't think sqlite is up for the task (without being janky af that is). Finished children dataTypes also other small adjustments

--- a/templates/fetchTemplate.html
+++ b/templates/fetchTemplate.html
@@ -38,7 +38,7 @@
             {%endfor%}'}}
         </main>
         <footer>
-            {{htmlContent}}
+            {{footerContent}}
         </footer>
     </body>
 </html>
