--- a/testCSM/templates/Client.html
+++ b/testCSM/templates/Client.html
@@ -34,33 +34,35 @@
                 <div class="card-body">
                     <form action="/new/Client/submit" method="post">
                         <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
-                        
                         <div class="mb-3 ">
-                            <label for="Name" class="form-label">Name</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="Name" id="Name"  {% if data is defined %}  value="{{data[0]}} {%endif%}" aria-describedby="addon" required>
-                                
+                            
+                            <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+                                <label for="Name" class="form-label">Name</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="Name" id="Name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  required>
+                                    
+                                </div>
                             </div>
-                        </div>
-                        
-                        <div class="mb-3 ">
-                            <label for="Surname" class="form-label">Surname</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="Surname" id="Surname"  {% if data is defined %}  value="{{data[1]}} {%endif%}" aria-describedby="addon" >
-                                
+                            
+                            <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+                                <label for="Surname" class="form-label">Surname</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="Surname" id="Surname" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                                    
+                                </div>
                             </div>
-                        </div>
-                        
-                        <div class="mb-3 ">
-                            <label for="Age" class="form-label">Age</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="Age" id="Age"  {% if data is defined %}  value="{{data[2]}} {%endif%}" aria-describedby="addonyrs" >
-                                
-                                <span class="input-group-text" id="addonyrs">yrs</span>
-                                
+                            
+                            <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+                                <label for="Age" class="form-label">Age</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="Age" id="Age" aria-describedby="addonyrs"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                                    
+                                    <span class="input-group-text" id="addonyrs">yrs</span>
+                                    
+                                </div>
                             </div>
+                            
                         </div>
-                        
                         <button type="submit" class="btn btn-primary">Add</button>
                         <a href="/" class="btn btn-danger">Cancel</a>
                     </form>
