--- a/testCSM/templates/Clients.html
+++ b/testCSM/templates/Clients.html
@@ -29,6 +29,10 @@
                     <a class="nav-link h1 " href="/Products">Products</a>
                 </li>
                 
+                <li class="nav-item">
+                    <a class="nav-link h1 " href="/secretPage">secretPage</a>
+                </li>
+                
             </ul>
             <div class="col-md-2"><a href="/logout" class="btn btn-danger btn-sm float-end">Log Out</a></div>
         </header>
