--- a/testCSM/templates/Super Secret.html
+++ b/testCSM/templates/Super Secret.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Product</title>
+        <title>Super Secret</title>
         <meta charset="utf-8" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -36,32 +36,14 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    <form action="/new/Product/submit" method="post">
+                    <form action="/new/Super Secret/submit" method="post">
                         <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
                         <div class="mb-3 ">
                             
                             <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-                                <label for="Client" class="form-label">Client</label>
+                                <label for="Secret" class="form-label">Secret</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" name="Client" id="Client" aria-describedby="addon"  readonly value="{%if Client is defined %}{{Client}}{%else%}{{data[0]}}{%endif%}" required>
-                                    
-                                </div>
-                            </div>
-                            
-                            <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-                                <label for="Price" class="form-label">Price</label>
-                                <div class="input-group">
-                                    <input type="number" class="form-control" name="Price" id="Price" aria-describedby="addon$"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
-                                    
-                                    <span class="input-group-text" id="addon$">$</span>
-                                    
-                                </div>
-                            </div>
-                            
-                            <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-                                <label for="Product name" class="form-label">Product name</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="Product name" id="Product name" aria-describedby="addon"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                                    <input type="text" class="form-control" name="Secret" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
                                     
                                 </div>
                             </div>
