--- a/testCSM/templates/secretPage.html
+++ b/testCSM/templates/secretPage.html
@@ -33,6 +33,10 @@
                     <a class="nav-link h1 active" href="/secretPage">secretPage</a>
                 </li>
                 
+                <li class="nav-item">
+                    <a class="nav-link h1 " href="/jsonDisplay">jsonDisplay</a>
+                </li>
+                
             </ul>
             <div class="col-md-2"><a href="/logout" class="btn btn-danger btn-sm float-end">Log Out</a></div>
         </header>
@@ -47,20 +51,20 @@
             
             <th scope="col" style="width:10%;">
                 
-                <a href="/new/Super_Secret" class="btn btn-success" style="width:100%;">New Super_Secret</a>
+                <a href="/new/superSecret" class="btn btn-success" style="width:100%;">New superSecret</a>
                 
             </th>
         </tr>
     </thead>
     <tbody>
-        {%for item in Super_SecretRows%}
+        {%for item in superSecretRows%}
             <tr name="row">
                 
                     
                     <td name="Secret">{{item[1]}}</td>
                     
                 
-                <td><a href="/edit/Super_Secret/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
+                <td><a href="/edit/superSecret/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
                     
                 </td>
             </tr>
