--- a/testCSM/templates/Client.html
+++ b/testCSM/templates/Client.html
@@ -30,6 +30,10 @@
                     <a class="nav-link h1" href="/secretPage">secretPage</a>
                 </li>
                 
+                <li class="nav-item">
+                    <a class="nav-link h1" href="/jsonDisplay">jsonDisplay</a>
+                </li>
+                
             </ul>
             <div class="col-md-2"><a href="/logout" class="btn btn-danger btn-sm float-end">Log Out</a></div>
         </header>
