--- a/testCSM/templates/Product.html
+++ b/testCSM/templates/Product.html
@@ -45,9 +45,9 @@
                         <div class="mb-3 ">
                             
                             <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-                                <label for="Client" class="form-label">Client</label>
+                                <label for="rowid" class="form-label">rowid</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" name="Client" id="Client" aria-describedby="addon"  readonly value="{%if Client is defined %}{{Client}}{%else%}{{data[0]}}{%endif%}" required>
+                                    <input type="text" class="form-control" name="rowid" id="rowid" aria-describedby="addon"  readonly value="{%if rowid is defined %}{{rowid}}{%else%}{{data[0]}}{%endif%}" required>
                                     
                                 </div>
                             </div>
