--- a/testCSM/templates/Products.html
+++ b/testCSM/templates/Products.html
@@ -47,7 +47,7 @@
     <thead class="tableFixHead bg-body">
         <tr>
             
-            <th scope="col"><input type="text" class="form-control" placeholder="Filter" onchange="filtr(this.value, 'Client');">Client</th>
+            <th scope="col"><input type="text" class="form-control" placeholder="Filter" onchange="filtr(this.value, 'rowid');">rowid</th>
             
             <th scope="col">Price</th>
             
@@ -63,7 +63,7 @@
             <tr name="row">
                 
                     
-                    <td name="Client">{{item[1]}}</td>
+                    <td name="rowid">{{item[1]}}</td>
                     
                 
                     
